Fixed layout issues and mobile styling

--- a/app/scss/custom.scss
+++ b/app/scss/custom.scss
@@ -651,7 +651,7 @@ a.blue-link:focus-visible {
 
 // Top level containers of pages
 .topLevelContainer {
-    padding: 3.75rem 1.5625rem;
+    padding: 1.875rem 1.5625rem;
 }
 
 @media (min-width: 576px) {
